--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "proyecto-ensek",
   "private": true,
   "version": "0.0.0",
-  "type": "module",  "scripts": {
+  "type": "module",
+  "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -26,7 +27,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
-    "sweetalert2": "^11.21.0"
+    "sweetalert2": "^11.22.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
