--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:auth": "cd server && node testAuth.js"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
