--- a/server/package.json
+++ b/server/package.json
@@ -19,9 +19,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pdfkit": "^0.17.1"
   },
   "devDependencies": {
     "node-fetch": "^3.3.2",
