--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
   "name": "proyecto-ensek",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test:auth": "cd server && node testAuth.js"
+    "start": "node server/index.js",
+    "server": "cd server && nodemon index.js",
+    "client": "vite",
+    "dev:full": "concurrently \"npm run server\" \"npm run client\"",
+    "seed:db": "cd server && node seeder.js",
+    "init:db": "cd server && node scripts/initDb.js",
+    "setup": "npm install && cd server && npm install",
+    "prod:setup": "npm ci && cd server && npm ci && npm run build",
+    "test": "cd server && node scripts/test.js",
+    "create:admin": "cd server && node scripts/createAdmin.js"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "@fortawesome/fontawesome-free": "^6.7.2",
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
-    "@fullcalendar/multimonth": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
-    "@fullcalendar/resource-daygrid": "^6.1.15",
-    "@fullcalendar/resource-timegrid": "^6.1.15",
-    "@fullcalendar/resource-timeline": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.2",
@@ -34,6 +38,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "concurrently": "^9.2.1",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
