--- a/server/package.json
+++ b/server/package.json
@@ -9,11 +9,7 @@
     "dev": "nodemon index.js",
     "seed": "node seeder.js",
     "init:db": "node scripts/initDb.js",
-    "check:db": "node scripts/checkDb.js",
-    "test": "node testAPI.js",
-    "test:auth": "node testAuth.js",
-    "test:auth:full": "node fullAuthTest.js",
-    "create-test-user": "node testUser.js"
+    "check:db": "node scripts/checkDb.js"
   },
   "dependencies": {
     "axios": "^1.9.0",
@@ -24,11 +20,9 @@
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
-    "morgan": "^1.10.0",
     "pdfkit": "^0.17.1"
   },
   "devDependencies": {
-    "node-fetch": "^3.3.2",
     "nodemon": "^3.0.2"
   }
 }
