--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.15.1",
+    "mongoose": "^8.18.0",
+    "morgan": "^1.10.1",
     "pdfkit": "^0.17.1"
   },
   "devDependencies": {
